# LanguagePerformenceTest

./: README.md
CSharpServer/: CSharpServer.sln  Clients.cs  MemoryPackChatServer.sln  Packet.cs  Program.cs  TcpChatServer.cs
CSharpServer/CSharpChatServer/: Clients.cs  Packet.cs  Program.cs  TcpChatServer.cs
CSharpServer/CSharpMemoryPackServer/: Clients.cs  MemoryPackServer.csproj  Packet.cs  Program.cs  TcpChatServer.cs
Client/Assets/Prefabs/: Chat.prefab  PerformancePanel.prefab
Client/Assets/Scenes/: ChatScene.unity  PerformanceTestScene.unity  TestScene.unity
Client/Assets/Scripts/: ChatObject.cs  Clock.cs  GameManager.cs  Packet.cs  TcpChatCustomClient.cs  TcpChatMsgPackClient.cs
Client/Assets/Scripts/Chat/: ChatManager.cs  ChatObject.cs  Clock.cs
Client/Assets/Scripts/Network/: Packet.cs  ServerType.cs
Client/Assets/Scripts/Network/Client/: TcpChatClient.cs  TcpChatMemoryPackClient.cs
Client/Assets/Scripts/Performance/: PerformanceManager.cs  PerformancePanel.cs
Client/Assets/Scripts/Util/: Converter.cs  MessageGenerator.cs  ServerWatch.cs
Client/ProjectSettings/: ProjectSettings.asset  TagManager.asset
CppServer/: CppChatServer.sln  CppChatServer.vcxproj  CppChatServer.vcxproj.filters  Main.cpp  Packet.h
RustServer/: Cargo.toml
RustServer/src/: main.rs  packet.rs  packet_factory.rs
