[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
env_logger = "0.10.1"
log = "0.4.20"
async-pipe = "0.1.3"
